--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Library_System
 excludes=
+file.reference.mysql-connector-java-5.1.13.jar=C:\\Users\\Usuario\\Desktop\\Programacion 2\\mysql-connector-java-5.1.13.jar
+file.reference.mysql-connector-java-5.1.46.jar=C:\\Users\\Usuario\\Desktop\\proyectos en neatbeans\\ProyectoSistema\\conector\\mysql-connector-java-5.1.46.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.46.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.13.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +76,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Library_System
-main.class=library.system.LibrarySystem
+main.class=library.system.Dashboard
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
