--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,17 +28,19 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ITP_Library.jar
+dist.jar=${dist.dir}/Libreria.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-5.1.13-bin.jar=C:\\Users\\Antonio\\Desktop\\TAP\\mysql_lib\\mysql-connector-java-5.1.13-bin.jar
 file.reference.mysql-connector-java-5.1.13-bin.jar-1=C:\\Program Files\\Java\\mysql_lib\\mysql-connector-java-5.1.13-bin.jar
+file.reference.mysql-connector-java-5.1.13.jar=C:\\Users\\Usuario\\Desktop\\Programacion 2\\mysql-connector-java-5.1.13.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.13-bin.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.13-bin.jar-1}
+    ${file.reference.mysql-connector-java-5.1.13-bin.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.13.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
